# open-clinic

./: .gitignore  Cargo.toml
playground/: Cargo.toml
playground/src/: main.rs
unibus/: Cargo.toml
unibus/src/: lib.rs  types.rs
unibus/src/rabbit/: connection.rs  mod.rs  system.rs
unibus/src/rabbit/connection/: actor.rs  mod.rs  options.rs  state.rs
unibus/src/rabbit/topology/: binding.rs  exchange.rs  mod.rs  queue.rs
