[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
tokio ={ version = "1.21.2", features = ["full"]}
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"]}
tracing-futures = "0.2.5"
unibus = { path = "../unibus" }


