[package]
name = "unibus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = { version = "0.13.0"}
tokio = { version = "1.21.2", features = ["full"]}
tracing = "0.1.37"
thiserror = "1.0.37"
lapin = "2.1.1"
tokio-reactor-trait = "1.1.0"
tokio-executor-trait = "2.1.0"
